--- a/src/components/TimerView/style.scss
+++ b/src/components/TimerView/style.scss
@@ -1,23 +1,23 @@
 @media screen and (min-width: 412px) {
-    #day-view {
-        margin-bottom: 32px;
+    #day-view, #hour-view, #minute-view {
+        margin-bottom: 48px;
         display: flex;
         justify-content: center;
     }
 
-    #day-view-divider {
+    #day-view-divider, #hour-view-divider, #minute-view-divider {
         display: none;
     }
 }
 
 @media screen and (min-width: 1110px) {
-    #day-view {
+    #day-view, #hour-view, #minute-view {
         margin-bottom: 0px;
         display: inline-flex;
         justify-content: left;
     }
 
-    #day-view-divider {
+    #day-view-divider, #hour-view-divider, #minute-view-divider {
         display: inline-flex;
     }
 }
